1 file modified, 1 added, 1 deleted

--- a/src/pages/mui-grid-test.astro
+++ b/src/pages/mui-grid-test.astro
@@ -4,9 +4,9 @@ import Card from '../components/Card.astro';
 import Table from '../components/Table.tsx';
 ---
 
-<Layout title="Wicked Dashboard">
+<Layout title="Grid Test">
 	<main>
-		<h1>Welcome to <span class="text-gradient">The Wicked Dashboard</span></h1>
+		<h1>Welcome to <span class="text-gradient">GRID TEST</span></h1>
 		<p class="instructions">
 			This is a completely experimental dashboard build for an internal client. The objective with this is to feed data to a custom <code>Wicked API</code> that will dynamically change the media attribution options on individual websites.
 		</p>
