--- a/src/pages/mui-grid-test.astro
+++ b/src/pages/mui-grid-test.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-import Table from '../components/Table.tsx';
+import Table from '../components/Table.jsx';
 ---
 
 <Layout title="Grid Test">
