--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,10 +3,9 @@ export interface Props {
 	title: string;
 	body: string;
 	href: string;
-	enable: boolean;
 }
 
-const { href, title, body, enable } = Astro.props;
+const { href, title, body } = Astro.props;
 ---
 
 <li class="link-card">
