I don't remember what I did

--- a/src/pages/mui-grid-test.astro
+++ b/src/pages/mui-grid-test.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Table from '../components/Table.jsx';
 import HomeGrid from '../components/HomeGrid.jsx';
+import HomeGrid2 from '../components/HomeGrid copy.jsx';
 ---
 
 <Layout title="Grid Test">
