--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: linear-gradient(135deg, rgba(173,27,25,0.5) -20%, rgba(29,31,33,0.9) 100%);
+		background: var(--accent);
 		background-repeat: no-repeat;
 		background-color: #1d1f21;
 		background-size: 100% 100%;
